crates/nash-driver/src/compile/snapshots/nash_driver__compile__nitpick_source_tests__call_function_checked.snap
---
source: crates/nash-driver/src/compile/nitpick_source_tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (type bool(..), Data(..))\nimport Builtin\nimport Eq exposing (Eq)\nimport Literal exposing (FromInt, FromString, FromBytes)\nf flag =\n    (case flag of\n         True -> (\\x -> x)) ()\n"
info: diagnostic
---
nash::pattern::incomplete

  × Case expression is not exhaustive.
   ╭─[Main.nash:7:6]
 6 │     f flag =
 7 │ ╭─▶     (case flag of
 8 │ ╰─▶          True -> (\x -> x)) ()
   ╰────
  help: Missing patterns:

            False

        Add the missing branches; use `todo` for unfinished bodies.
