crates/nash-driver/src/compile/snapshots/nash_driver__compile__nitpick_source_tests__do_binding_rhs_before_continuation.snap
---
source: crates/nash-driver/src/compile/nitpick_source_tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (type bool(..))\nimport Monad exposing (Monad)\nf flag value =\n    do\n        x <- (case flag of\n                  True -> value)\n        case flag of\n            False -> value\n"
info: diagnostic
---
nash::pattern::incomplete

  × Case expression is not exhaustive.
   ╭─[Main.nash:6:15]
 5 │         do
 6 │ ╭─▶         x <- (case flag of
 7 │ ╰─▶                   True -> value)
 8 │             case flag of
   ╰────
  help: Missing patterns:

            False

        Add the missing branches; use `todo` for unfinished bodies.

nash::pattern::incomplete

  × Case expression is not exhaustive.
   ╭─[Main.nash:8:9]
 7 │                       True -> value)
 8 │ ╭─▶         case flag of
 9 │ ╰─▶             False -> value
   ╰────
  help: Missing patterns:

            True

        Add the missing branches; use `todo` for unfinished bodies.
